package com.zsx.design.pattern.structural.decorator;

public interface Component {

    String operation();
}
