package com.zsx.design.pattern.structural.decorator;

public class ConcreteComponent implements Component {

    @Override
    public String operation() {
        return "ConcreteComponent";
    }
}
